Prevent image overflow

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,6 @@ body {
   margin: 0 auto;
   padding: 1rem;
 }
-
 header {
   margin: 0 auto 2rem auto;
   a {
@@ -43,6 +42,11 @@ blockquote {
   margin: 0;
   border-left: 2px solid #ccc;
   padding-left: 1ex;
+}
+
+img {
+  max-width: 720px;
+  width: 100%;
 }
 
 .highlight {
